src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__add_artist_ui__add_artist_ui_tests__tests__snapshot_tests__add_artist_modal_AddArtistSelectQualityProfile.snap
---
source: src/ui/lidarr_ui/library/add_artist_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭────────────────────────────────  Add - Test Artist (American pianist)  ─────────────────────────────────╮                              
                     ╭──────│                                                                                                         │───────╮                      
                     │Test A│                                                                                                         │       │                      
                     ╰──────│                                                                                                         │───────╯                      
                     ╭──────│                                                                                                         │───────╮                      
                     │   ✔  │                                                                                                         │       │                      
                     │=>    │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                  ╭─────────────────────────────────────────────────╮    │       │                      
                     │      │                                     Root Folder: │/nfs/music                                     ▼ │    │       │                      
                     │      │                                                  ╰─────────────────────────────────────────────────╯    │       │                      
                     │      │                                     ╭───────────────────────────────╮──────────────────────────────╮    │       │                      
                     │      │                                     │Any                            │                            ▼ │    │       │                      
                     │      │                                     │                               │──────────────────────────────╯    │       │                      
                     │      │                                     │                               │──────────────────────────────╮    │       │                      
                     │      │                               Monito│                               │                            ▼ │    │       │                      
                     │      │                                     │                               │──────────────────────────────╯    │       │                      
                     │      │                                     │                               │──────────────────────────────╮    │       │                      
                     │      │                                 Qual│                               │                            ▼ │    │       │                      
                     │      │                                     │                               │──────────────────────────────╯    │       │                      
                     │      │                                     │                               │──────────────────────────────╮    │       │                      
                     │      │                                Metad│                               │                            ▼ │    │       │                      
                     │      │                                     │                               │──────────────────────────────╯    │       │                      
                     │      │                                     │                               │──────────────────────────────╮    │       │                      
                     │      │                                     │                               │                              │    │       │                      
                     │      │                                     ╰───────────────────────────────╯──────────────────────────────╯    │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │                                                                                                         │       │                      
                     │      │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│       │                      
                     │      ││                        Add                        ││                      Cancel                      ││       │                      
                     ╰──────│╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│───────╯                      
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
