src/ui/lidarr_ui/library/snapshots/managarr__ui__lidarr_ui__library__add_artist_ui__add_artist_ui_tests__tests__snapshot_tests__add_artist_ui_AddArtistEmptySearchResults.snap
---
source: src/ui/lidarr_ui/library/add_artist_ui_tests.rs
expression: output
---
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                     ╭─────────────────────────────────────────────────────  Add Artist  ─────────────────────────────────────────────────────╮                      
                     │Test Artist                                                                                                             │                      
                     ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯                      
                     ╭────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╮                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                       ╭───────────────  Error  ───────────────╮                                        │                      
                     │                                       │ No artists found matching your query! │                                        │                      
                     │                                       │                                       │                                        │                      
                     │                                       ╰───────────────────────────────────────╯                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     │                                                                                                                        │                      
                     ╰────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
